--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent">
 
                 <Button
-                    android:id="@+id/crearPedido"
+                    android:id="@+id/crearPedidoYBotones"
                     android:layout_width="205dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
