--- a/app/src/main/res/layout/fragment_pedidos.xml
+++ b/app/src/main/res/layout/fragment_pedidos.xml
@@ -270,4 +270,17 @@
         app:layout_constraintTop_toBottomOf="@+id/scroll_clientes_favoritos"
         app:layout_constraintVertical_bias="0.038" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_pedidos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorForeground"
+        android:scrollbars="vertical"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pedidos_en_curso"
+        app:layout_constraintVertical_bias="0.053" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
