--- a/app/src/main/res/drawable-v24/mybutton.xml
+++ b/app/src/main/res/drawable-v24/mybutton.xml
@@ -13,7 +13,7 @@
             <stroke android:width="1dip" android:color="@color/colorForeground" />
             <solid android:color="@color/colorForeground"/>
         </shape>
-    </item>
+    </item>zzz
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="15dip" />
