--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBackground">#EDEDED</color>
     <color name="colorForeground">#FFFFFF</color>
     <color name="subtitleTextColor">#455068</color>
+    <color name="amarillo">#FEC31D</color>
 </resources>
