--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -330,7 +330,72 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
+
+
+
         </ScrollView>
+
+
+        <Button
+            android:id="@+id/buttonStart"
+            android:layout_width="75dp"
+            android:layout_height="35dp"
+            android:background="@drawable/buttonyellow"
+            android:text="@string/start"
+            android:textAlignment="center"
+            android:textColor="@color/colorBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.795" />
+
+        <Button
+            android:id="@+id/buttonStop"
+            android:layout_width="75dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="116dp"
+            android:background="@drawable/buttonyellow"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="@string/stop"
+            android:textAlignment="center"
+            android:textColor="@color/colorBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.795" />
+
+        <Button
+            android:id="@+id/buttonPlay"
+            android:layout_width="75dp"
+            android:layout_height="35dp"
+            android:background="@drawable/buttonyellow"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="@string/play"
+            android:textAlignment="center"
+            android:textColor="@color/colorBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.98"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.795" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="148dp"
+            android:text="@string/graba"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.71" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
